--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -14,6 +14,10 @@
         [disabled]="!allowNewServer"
         (click)="onCreateServer()"
 >Add Server</button>
-<p> {{ serverCreationStatus }}</p>
-<app-server></app-server>
-<app-server></app-server>
+<p *ngIf="serverCreated; else noServer">Server was created the server name is {{ serverName }}</p>
+<ng-template #noServer>
+  <p>No server was created</p>
+</ng-template>
+<!--<p> {{ serverCreationStatus }}</p>-->
+<app-server *ngFor="let server of servers"></app-server>
+
